webapp/WEB-INF/base/emfrontend2/theme/styles/theme.css
/* ... */
.form-control {
    padding: .275rem .75rem;
    font-size: 1rem;
    line-height: 1.3;
}
select.form-control:not([size]):not([multiple]) {
    height: calc(2rem);
}
.form-control-sm {
	width:200px;
	margin-right: 10px;
	display:inline-block;
	}
.form-control.datepicker {
    width: 240px;
    display: inline-block;
}
.tooltip {
    position: relative;
    opacity: 1;
    z-index: auto;
    line-height: normal;
}
h3 {
    font-size: 24px;
    margin-top: 20px;
}
.modal {
	z-index: 25000;
}
.modal-title {
	display: inline-block;
} 


#emcontent { position: relative;}
#emfooter {   
	bottom: 0;
    left: 0;
    right: 0;
}
.table td, .table th {
    vertical-align: middle;
}



/**MainContent*/
#application #emcontainer { padding: 0 2px; }




/**Header**/
#header .navlinks {
    float: right;
    background: #2790B0;
    border-radius: 0 0 5px 5px;
    padding: 1px 10px 5px 10px;
    color: #59bbd9;
    line-height:1.2;
}
#header .navlinks>ul { list-style: none; margin:0; padding: 0;}
#header .navlinks>ul li { float:left; padding:1px 8px; border-left:1px solid #fff; font-size:90%;}
#header .navlinks>ul li.first { border-left: none;}
#header ul.dropdown-menu li { float: none;}
#header ul.dropdown-menu li a,#header ul.dropdown-menu li a:hover  { color:#111;}
#header .navlinks li>a {
    position: relative;
    color: #fff;
    padding: 0 5px;
}
#header .navlinks li>a:hover {
    color: #fff;
}
#header .navlinks>ul li.dropdown:last-child .dropdown-menu {
  right: 0;
  left: auto;
}
#header .navlinks .dropdown-item {
	padding:.25rem 1rem;
	font-size:0.8rem;
}
.emheader { height: 100px; }
.emheader .logocontainer { float: left; padding: 20px 20px 0 20px;}

.emheader-right {
	float:right;
}
#headerstatusarea
{
	float:right;
	clear:right;
	margin: 10px 10px 0 0;
	min-width: 200px;
	min-height: 40px;
}


/*Main Columns*/
html, body, #application, #emcontainer {
	height: 100%;
}
#emcontent {
	height:100%;
	min-height: 100%;
}
.mainlayoutcontainer {
	position:relative;
	height: 100%;
	
}
.col-sidebar {
	position: fixed;
    top: 0;
    bottom:0;
    left:-80%;
    display: block!important;
    width: 80%;
    height: 100%;
    
}
.col-content {
	min-height: 200px;
	position:relative;
}
@media (min-width: 992px) {
	.col-sidebar {
	    position: absolute;
	    left:0;
	    width: 280px;
	    
	    min-height: 100%;
    	
	}
	.col-content {
		margin-left: 280px;
		min-height: 200px;
	}
}
.emfooter {
	clear:both;
	padding:50px 0 10px;
}

/*Sidebar*/
.col-sidebar { padding-top: 20px; }
.col-sidebar h2 { margin: 0 0 10px 10px; }
.col-sidebar .ui-widget {
	margin: 0 20px 20px;	
} 
.col-sidebar .ui-widget .select2 { 
	min-width: 216px;
	max-width: 100%;
	}

.filters-sidebar h4 { margin:0; font-size:95%; font-weight:bold; }
.filters-sidebar ul,
.filters-sidebar-selected ul { 
	margin:0 0 10px;
	padding:0;
	list-style: none; 
	font-size:85%;
}



/*Widget*/
.ui-widget {
/*	font-size:0.8em; */
	margin: 0 auto;
	margin-bottom:20px;	
}
.ui-widget .ui-widget {
    font-size: 1em;
}
.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
    font-size: 11px;
}
.ui-widget-header {
    font-weight: bold;
    padding: 5px 0px 5px 14px;
    font-size: 13px;
    border-radius: 5px 5px 0 0;
}

.ui-widget input,
.ui-widget select,
.ui-widget textarea,
.ui-widget button, 
.ui-widget a.btn-sm {
	font-size: 11px;
	line-height:1.5;
}
.ui-widget.ui-widget-content {
	border: 1px solid #c5c5c5;
}
.ui-widget-content {
	border: 1px solid #dddddd;
	background: #ffffff;
	color: #333333;
	padding:10px;
}
.ui-widget-content-wide {
	padding: 0;
}
.ui-widget-header {
    padding: 4px 6px 4px 10px;
}
.widget-header-title {
	font-size: 1em;
	line-height: 1.2;
}

.ui-widget .sidetoggle .ui-widget-toggle {
	display: inline-block;
	float:right;
	padding:10px;
	cursor:pointer;
}
.ui-widget .widget-header-setup,
.ui-widget .widget-header-edit {
	opacity: 0.6;
    filter: alpha(opacity=60);
	
	display:none;
	float:right;
}
.expanded .widget-header-setup,
.ui-widget .widget-header-edit {
	display:inline-block;
}
.ui-widget .widget-header-setup:hover,
.ui-widget .widget-header-edit:hover {
 	opacity: 1;
    filter: alpha(opacity=100);	
}
.ui-widget .widget-header-edit {
	float:right;
}
.ui-widget-actions {
	padding:20px 0 20px;
	
}
.ui-draggable-dragging {
	opacity: 0.7;
}





/*Search View Sub Nav*/
.emsubnav { height: 34px;}

#sub-nav ul.resultsnav  {
	margin:0;
	padding:0;
	list-style: none;
	float:left;
}
#sub-nav  ul.resultsnav li {
	float:left;
	height:34px;
} 
#sub-nav ul.resultsnav  li a {
	display:block;
	text-decoration: none;
	padding:0 15px;
}

#sub-nav ul.resultsnavright  {
	margin:0;
	padding:0;
	list-style: none;
	float:right;
}
#sub-nav  ul.resultsnavright li {
	float:right;
	height:34px;
} 
#sub-nav ul.resultsnavright  li a {
	display:block;
	line-height:34px;
	text-decoration: none;
	padding:0 15px;
}

.emsubnav .dropdown-menu { 
	padding:0; 
	margin:0;
	min-width:11rem;
	}

.resultscount {
	font-size:90%;
	line-height: 30px;
}
.resultsnavtitem {
	padding:12px 5px 0;
}


/* SAVED SEARCH STYLES */
.search-list, .sidebar-list {
    padding: 0;
    margin: -10px -14px;
}

.search-list li, .sidebar-list li {
    margin: 0;
    padding: 0;
    list-style: none;
    color: #49494b;
}


.search-list li a.search-href, .sidebar-list a {
    padding: 8px 30px;
    margin: 0 4px 0 4px;
    text-decoration: none;
    display: block;
    font-size: 0.8rem;
    word-wrap: break-word;
    border-bottom: 1px solid #e5e5e5;
}
.search-list li:last-child a.search-href, .sidebar-list li:last-child a {
    border-bottom: none;
}
.search-list li:hover a.search-href, .sidebar-list a:hover {
    background: #efefef;
}
.search-save a {
    background: url('../images/iconset-10x10.png') 0px 10px;
    width: 10px;
    height: 10px;
    float: left;
    margin: 12px 0 0 12px;
    visibility: hidden;
    position: relative;
    z-index: 3;
}
.search-save a:hover {
    background-position: 0 20px;
}
/* ... */

